[package]
name = "conveyor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# when releasing use this
# bevy = "0.11.0"

# when developing use dynamic linking for faster compile, does not work for wasm
#bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
console_error_panic_hook = "0.1"
tiled = "0.11.1"
bevy_ecs_tilemap = { version = "0.11.0", features = ["atlas"] }
anyhow = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.61"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.release]
opt-level = 's'
lto = "thin"